tests/snapshots/examples_fixtures/type_system__failing__03_runtime_return_violation.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/03_runtime_return_violation.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Return Type Mismatch

The body of `bad` does not match its declared return type.

  examples/type_system/failing/03_runtime_return_violation.flx:28:5
   |
27 | fn bad() -> Int {
   |             --- `bad` was declared to return `Int`
28 |     "not-an-int"
   |     ^^^^^^^^^^^^
   |     ------------ this expression has type `String`

Note:
  declared return type: Int
  body type: String

Help:
  Return a `Int` value from `bad` or change its annotation.
== stdout ==
<not executed>
